# ROS2-Basic

ros2_ws/install/actions_quiz/lib/actions_quiz/: distance_action_client  distance_action_server
ros2_ws/install/client_pkg/lib/client_pkg/: service_client_node  service_client_v2
ros2_ws/install/client_pkg/share/client_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
ros2_ws/install/executors_exercises_pkg/lib/executors_exercises_pkg/: box_bot_manager_node  executor_example_1_node  executor_example_2_node  executor_example_3_node  executor_example_4_node  executor_example_4_singlethreaded_node  executor_example_5_mutualyexclusive_multiple_node  executor_example_5_mutualyexclusive_node  executor_example_5_node  executor_example_5_reentrant_node
ros2_ws/install/executors_exercises_pkg/share/executors_exercises_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/exercise52_pkg/lib/exercise52_pkg/: exercise52_node
ros2_ws/install/exercise52_pkg/share/exercise52_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/logs_test/lib/logs_test/: logger_example_node
ros2_ws/install/movement_pkg/lib/movement_pkg/: movement_server_node
ros2_ws/install/movement_pkg/share/movement_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/my_action_client/lib/my_action_client/: action_client_node
ros2_ws/install/my_action_client/share/my_action_client/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/my_action_server/lib/my_action_server/: action_server_node
ros2_ws/install/my_action_server/share/my_action_server/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/actions_quiz/: CMakeLists.txt  package.xml
ros2_ws/src/actions_quiz/src/: distance_action_client.cpp  distance_action_server.cpp
ros2_ws/src/actions_quiz_msg/: CMakeLists.txt  package.xml
ros2_ws/src/client_pkg/: CMakeLists.txt
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/executors_exercises_pkg/: CMakeLists.txt
ros2_ws/src/exercise52_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/logs_test/: CMakeLists.txt
ros2_ws/src/my_action_client/: CMakeLists.txt
ros2_ws/src/my_action_client/src/: action_client.cpp
ros2_ws/src/my_action_server/: CMakeLists.txt
ros2_ws/src/my_action_server/src/: action_server.cpp
ros2_ws/src/my_components/: CMakeLists.txt
ros2_ws/src/my_package/: CMakeLists.txt
ros2_ws/src/my_package/src/: simple.cpp
ros2_ws/src/services_quiz/: CMakeLists.txt
ros2_ws/src/services_quiz/launch/: services_quiz_client.launch.py
ros2_ws/src/services_quiz/src/: rotate_client.cpp  rotate_server.cpp
ros2_ws/src/services_quiz_srv/: CMakeLists.txt  package.xml
ros2_ws/src/topic_publisher_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/topic_publisher_pkg/src/: simple_topic_publisher.cpp  velocity_publisher.cpp
ros2_ws/src/topic_subscriber_pkg/: CMakeLists.txt
ros2_ws/src/topic_subscriber_pkg/launch/: laser_subscriber.launch.py
ros2_ws/src/topic_subscriber_pkg/src/: laser_subscriber.cpp  sub_odom.cpp
ros2_ws/src/topics_quiz/: CMakeLists.txt  package.xml
ros2_ws/src/topics_quiz/src/: topics_quiz.cpp
(+116 files in other folders)
